# astral-runtime

./: .clang-format  .gitignore  .gitmodules  BUILD.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  FEATURE_MATRIX.md  LICENSE  NOTICE  README.md  ROADMAP.md  SECURITY.md
.githooks/: pre-commit
.github/workflows/: ci.yml  docs.yml  release-sign.yml  unity-gameci.yml
backend_plugins/: CMakeLists.txt
backend_plugins/cpu_llama/: CMakeLists.txt  cpu_llama_backend_plugin.cpp
backend_plugins/sample/: CMakeLists.txt  sample_backend_plugin.cpp
backend_plugins/toy/: CMakeLists.txt  toy_backend_plugin.cpp
benchmarks/: CMakeLists.txt  bench_alloc.cpp  bench_clock.hpp  bench_common.hpp  bench_concurrency.cpp  bench_embeddings.cpp  bench_features.cpp  bench_inference.cpp  bench_lifecycle.cpp  bench_platform.cpp  main.cpp
ci/: README.md
ci/unity/: README.md
ci/unreal/: README.md
cmake/: CompilerFlags.cmake  validate_unreal_thirdparty_provenance.cmake
docs/: ABI_VERSIONING.md  CUDA_KERNEL_STRATEGY.md  CUDA_PARITY.md  EMBEDDED_PROFILE.md  FEATURE_MATRIX.md  FEATURE_PARITY.md  PROFILING_TRACY.md  README.md  VISION_AUDIO.md
docs-site/: mkdocs.yml
docs/api/: AGENT_RUNTIME.md  ASYNC_DELIVERY.md  CHUNKING.md  ERROR_HANDLING.md  (+11 more)
examples/: CMakeLists.txt  astral_c_quickstart.c
examples/embedded/: CMakeLists.txt  astral_concurrency_contract.cpp  astral_embedded_cli.cpp
examples/unreal/AstralSample/: AstralSample.uproject  README.md
examples/unreal/AstralSample/Config/: DefaultEngine.ini  DefaultGame.ini
examples/unreal/AstralSample/Source/: AstralSample.Target.cs  AstralSampleEditor.Target.cs
examples/unreal/AstralSample/Source/AstralSample/: AstralSample.Build.cs  AstralSample.cpp  AstralSampleActor.cpp  AstralSampleActor.h  AstralSampleGameMode.cpp  AstralSampleGameMode.h
examples/unreal/AstralSample/Source/AstralSample/Examples/: AstralCharacterVariantsComponent.cpp  AstralCharacterVariantsComponent.h  AstralLocalKnowledgeComponent.cpp  AstralLocalKnowledgeComponent.h  AstralMultimodalInputComponent.cpp  AstralMultimodalInputComponent.h  AstralMultipleConversationsComponent.cpp  AstralMultipleConversationsComponent.h  AstralStatefulNpcComponent.cpp  AstralStatefulNpcComponent.h  AstralStreamingChatComponent.cpp  AstralStreamingChatComponent.h
include/: astral_backend.h  astral_backend_plugin.h  astral_rt.h
scripts/: README.md  build_docs_site.sh  check_staged_clang_format.py  check_unreal_validation_access.sh  create_unreal_sample_project.sh  generate_abi_layout_report.sh  generate_release_metadata.sh  generate_release_sbom.py  hetzner_watchdog.sh  hf_gguf_download_lfm25_all.sh  hf_gguf_download_lfm25_text.sh  hf_gguf_download_manifest.sh  hf_gguf_manifest_full.json  hf_gguf_manifest_lfm25_all.json  hf_gguf_manifest_lfm25_text.json  hf_gguf_sync.py  install_git_hooks.sh  inventory_comments.py  model_preset_tool.py  model_presets.json  mtmd_fixture_manifest_lfm25.json  package_release.sh  parse_hf_matrix_log.py  resolve_mtmd_fixtures.py  run_allocator_perf_capture.sh  run_arm64_hardware_validation.sh  run_asan.sh  run_ci_bench_features.sh  run_cuda_parity.sh  run_cuda_parity_matrix.sh  run_embedded_smoke.sh  run_embedded_validation.sh  run_fast_presubmit.sh  run_feature_bench_suite.sh  run_hf_bench_matrix.sh  run_hf_full_suite.sh  run_hf_gguf_suite.sh  run_hf_wait_and_bench.sh  run_massif.sh  run_memory_ann_tuning.sh  (+31 more)
src/backend/: CMakeLists.txt  backend.cpp  backend.hpp  plugin_loader.cpp  test_backend_basic.cpp
src/backend/cpu/: CMakeLists.txt  cpu_backend.cpp  cpu_backend.hpp
src/backend/cuda/: cuda_backend.cpp
src/backend/mock/: mock_backend.cpp
src/backend/remote/: remote_backend.cpp
src/inference/: CMakeLists.txt  adapter.cpp  adapter.hpp  agent.cpp  agent.hpp  api.cpp  chunking.cpp  chunking.hpp  conversation.cpp  conversation.hpp  conversation_runtime.cpp  conversation_runtime.hpp  embedder.cpp  embedder.hpp  executor.cpp  executor.hpp  memory_index.cpp  memory_index.hpp  memory_index_graph.cpp  memory_index_internal.hpp  memory_index_kernels.cpp  memory_index_snapshot.cpp  model.cpp  model.hpp  prompt_chunks.hpp  sampler.cpp  sampler.hpp  session.cpp  session.hpp  tooling.cpp  tooling.hpp
src/utils/: CMakeLists.txt  README.md  logging.cpp  logging.hpp  string_builder.hpp  test_utils.cpp  trace.hpp  utf8.cpp  utf8.hpp
tests/: CMakeLists.txt  MEMORY_VALIDATION.md  MODEL_SOURCES.md  README.md  gate_allocations.cpp  gate_io_syscalls.cpp  gate_model_churn_soak.cpp  gate_rss_cap.cpp  main.cpp  model_downloader.sh  model_preset_tool_smoke.py  test_abi_invalid_args.cpp  test_arena.cpp  test_backend.cpp  test_concurrency.cpp  test_continuous_batching.cpp  test_core.cpp  test_cuda_e2e.cpp  test_cuda_parity.cpp  test_embeddings.cpp  test_error_scope.cpp  test_framework.cpp  test_framework.h  test_framework.hpp  test_inference.cpp  test_integration.cpp  test_logging.cpp  test_media.cpp  test_memory.cpp  test_memory_validation.cpp  test_model_sources.cpp  test_platform.cpp  test_prompt_cache.cpp  test_provider_harness.cpp  test_threads_disabled.cpp  test_tokenization.cpp  test_utf8.cpp
tests/cmake/: gate_comment_inventory.cmake  gate_cuda_parity_runner.cmake  gate_doc_links.cmake  gate_error_taxonomy.cmake  gate_hf_matrix_log.cmake  gate_mtmd_fixture_manifest.cmake  gate_release_artifact_signature.cmake  gate_release_evidence.cmake  gate_release_metadata.cmake  gate_release_notes_policy.cmake  gate_release_required_plan.cmake  gate_release_sign_workflow.cmake  gate_shared_exports.cmake  gate_source_scans.cmake  gate_unity_editmode_results.cmake  gate_unity_mobile_package_layout.cmake  gate_unity_samples.cmake  gate_unreal_automation_results.cmake  gate_unreal_compatibility_matrix.cmake  gate_unreal_container_runner.cmake  gate_unreal_conversation_wrapper.cmake  gate_unreal_header_mirror.cmake  gate_unreal_sample_package_runner.cmake  gate_unreal_sample_runtime_log.cmake  gate_unreal_sample_scaffold.cmake  gate_unreal_validation_access.cmake  gate_windows_large_page_runner.cmake
toolchains/: linux-arm64.cmake  linux-armv7.cmake
(+140 files in other folders)
